[tool.poetry]
name = "mnist-diffusion-model"
version = "0.1.0"
description = ""
authors = ["enfow <wgm0601@gmail.com>"]
readme = "README.md"
packages = [{include = "mnist_diffusion_model"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
